parrot-analytics/poc/gloo-edge/istio-integration/configuration/httpbin/httpbin-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: apps-configuration
spec:
  sslConfig:
    secretRef:
      name: httpbin-tls
      namespace: apps-configuration
  virtualHost:
    domains:
    - 'apps.$DOMAIN_NAME'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-upstream
            namespace: apps-configuration
